attempt to fix DT-2001, fix spacing below images for Windows phone

--- a/less/plugin-ecommerce.less
+++ b/less/plugin-ecommerce.less
@@ -607,6 +607,7 @@
     @media @mobile {
         max-height: 170px;
         height: auto;
+        width: 100%;
         img {
             max-height: 150px;
             width: auto;
@@ -622,14 +623,16 @@
 @media only screen and (max-width : 768px) and (min-width : 480px) {
     .summary-table .cell--image {
         max-width: 50px;
+
+
     }
 }
 
 
 @media only screen and (max-width: 480px) {
     .summary-table .cell {
-        width: 100%;
-        display: inline-block;
+        display: block;
+        width: auto;
     }
 }
 
